--- a/presentations/visitToHPE/hpePresentation.org
+++ b/presentations/visitToHPE/hpePresentation.org
@@ -148,7 +148,15 @@ Paralelo e Distribuído. Porto Alegre, 2016.
 
 - *FT*
 
-#+LaTeX: {\centering\includegraphics[width=\textwidth,height=4.5cm]{img/gandhiFt.png}}
+#+LaTeX: {\centering\includegraphics[width=\textwidth]{img/gandhiFt.png}}
+
+
+*** Preliminary Results
+
+- *FT* (1 thread)
+
+#+LaTeX: {\centering\includegraphics[width=\textwidth]{img/gandhiFt1thread.png}}
+
 
 * Conclusion
 ** 
@@ -241,16 +249,6 @@ head(df);
 
 #+RESULTS:
 #+begin_example
-
-Attaching package: ‘dplyr’
-
-The following objects are masked from ‘package:stats’:
-
-    filter, lag
-
-The following objects are masked from ‘package:base’:
-
-    intersect, setdiff, setequal, union
      Start      End   Duration                            Value PAPI_L2_TCA
 1 118.6302 118.6579   0.027724         !$omp parallel @ft.f:190         648
 2 118.6579 371.7982 253.140292               !$omp do @ft.f:190      247956
@@ -266,6 +264,39 @@ The following objects are masked from ‘package:base’:
 5          10           1        0        0     24
 6          12          53        0        0     24
 #+end_example
+
+#+begin_src R :results output graphics :file img/gandhiFt1thread.png :exports both :width 1600 :height 400 :session
+library(ggplot2);
+library(dplyr);
+
+df <- filter(df,Thread==1)
+df1 <- df;
+
+tstart = min(df1$Start);
+tend = max(df1$End);
+ggplot() +
+    theme_bw(base_size = 16) +
+    xlab("Time [s]") + ylab("Thread") +
+        theme (
+            plot.margin = unit(c(0,0,0,0), "cm"),
+            legend.margin = unit(.1, "line"),
+            panel.grid = element_blank(),
+            legend.position = "bottom",
+            legend.title = element_blank()
+        ) +
+    coord_cartesian(xlim=c(tstart,tend)) +
+    guides(fill = guide_legend(nrow = 4)) +
+    geom_rect(data=df1, alpha=1, aes(fill=Value,
+                                  xmin=Start,
+                                  xmax=End,
+                                  ymin=Thread,
+                                  ymax=Thread + 0.9)) 
+   # scale_fill_brewer(palette = "Set1");
+#+end_src
+
+#+RESULTS:
+[[file:img/gandhiFt1thread.png]]
+
 
 #+begin_src R :results output graphics :file img/gandhiFt.png :exports both :width 1600 :height 400 :session
 library(ggplot2);
